new section added

--- a/src/styles/NavigationButton.css
+++ b/src/styles/NavigationButton.css
@@ -1,6 +1,6 @@
 .navigation-button {
     text-decoration: none;
-    color: #646363;
+    color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
