--- a/src/styles/CardSlider.css
+++ b/src/styles/CardSlider.css
@@ -24,9 +24,13 @@
 .settings {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.5rem;
   flex-direction: row;
+  width: 70%;
+  overflow-x: auto;
+  white-space: nowrap;
+  padding: 10px 0;
 }
 
 .active {
