--- a/src/styles/CollectionCards.css
+++ b/src/styles/CollectionCards.css
@@ -1,10 +1,54 @@
 .collection-cards-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(6, 6, 74);
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #172554;
+  align-items: center;
+  gap: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.collection-header {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-bottom: 0.5px solid #1c1c1c;
+  height: 70px;
+}
+
+.collection-buttons-container {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.collection-cards-list {
+  margin-top: 0;
+  display: grid;
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+  gap: 1rem;
+  padding: 1rem;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .collection-cards-list {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 768px) {
+  .collection-cards-list {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .collection-cards-list {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
