--- a/src/styles/CollectionCards.css
+++ b/src/styles/CollectionCards.css
@@ -35,6 +35,27 @@
   padding: 1rem;
 }
 
+.collection-search-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1rem;
+}
+
+.collection-search-input {
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 0.5px solid rgba(211, 211, 211, 0.05);
+  background-color: transparent;
+  color: #fff;
+}
+
+.collection-search-input:focus {
+  outline: none;
+  border: 0.5px solid rgb(3, 166, 231);
+}
+
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .collection-cards-list {
     grid-template-columns: repeat(3, minmax(0, 1fr));
