--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 :root {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+  --text-primary: white;
+  --accent: #172554;
+  --placeholder-text: rgba(255, 255, 255, 0.3);
+  --placeholder-bg: rgba(0, 0, 0, 0.5);
 }
 
 * {
@@ -12,5 +16,5 @@
 
 body {
   background-color: black;
-  color: white;
+  color: var(--text-primary);
 }
