--- a/src/components/CardsCollection/CardsCollection.css
+++ b/src/components/CardsCollection/CardsCollection.css
@@ -18,7 +18,6 @@
   align-items: center;
   padding: 1rem;
   height: 70px;
-  background-color: #121d3f;
 }
 
 .collection-header-left-container {
@@ -84,7 +83,7 @@ input[type="search"] {
 }
 
 input[type="search"]::placeholder {
-  color: var(--text-secondary);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 input[type="search"]:focus {
@@ -114,6 +113,7 @@ input[type="search"]:focus {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  color: var(--text-primary);
 }
 
 .collection-card-checkbox {
@@ -122,20 +122,20 @@ input[type="search"]:focus {
   appearance: none;
   width: 14px;
   height: 14px;
-  border: 1px solid #5e5e5e;
+  border: 1px solid var(--text-secondary);
   border-radius: 3px;
   transition: all 0.2s ease-in-out;
   padding-left: 2px;
 }
 
 .collection-card-checkbox:checked {
-  background-color: var(--text-primary);
+  background-color: yellow;
   border-color: var(--text-primary);
 }
 
 .collection-card-checkbox:checked::after {
   content: "✔";
-  color: #000;
+  color: black;
   font-size: 12px;
   position: absolute;
   top: 50%;
