--- a/src/components/CardsCollection/CardsCollection.css
+++ b/src/components/CardsCollection/CardsCollection.css
@@ -8,6 +8,7 @@
   gap: 1rem;
   margin-left: auto;
   margin-right: auto;
+  min-width: 380px;
 }
 
 .collection-header-container {
@@ -17,7 +18,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  height: 70px;
+  overflow: hidden;
+  gap: 1rem;
 }
 
 .collection-header-left-container {
@@ -58,6 +60,7 @@
   font-weight: 600;
   transition: all 0.2s ease-in-out;
   height: 36px;
+  /* width: 150px; */
 }
 
 .collection-action-btn:hover {
@@ -81,6 +84,7 @@ input[type="search"] {
   border: 0.5px solid transparent;
   background-color: var(--placeholder-bg);
   color: var(--text-primary);
+  width: 150px;
 }
 
 input[type="search"]::placeholder {
@@ -206,5 +210,28 @@ input[type="search"]:focus {
 @media screen and (max-width: 500px) {
   .collection-list {
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .collection-header-container {
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .collection-header-left-container {
+    flex-direction: column;
+  }
+
+  .collection-header-right-container {
+    flex-direction: column-reverse;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1200px) {
+  .collection-header-container {
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
   }
 }
