--- a/src/components/CardsSlider/CardsSlider.css
+++ b/src/components/CardsSlider/CardsSlider.css
@@ -50,7 +50,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  height: 70px;
+  gap: 1rem;
 }
 
 .card-slider-header-left-container,
@@ -153,4 +153,10 @@
   justify-content: center;
   gap: 0.5rem;
   font-size: 16px;
+}
+
+@media screen and (max-width: 768px) {
+  .card-slider-header-container {
+    flex-direction: column;
+  }
 }
