--- a/src/components/modalForms/modalForm.css
+++ b/src/components/modalForms/modalForm.css
@@ -113,3 +113,9 @@ input[type="file"]::-webkit-file-upload-button {
   background-color: var(--placeholder-bg);
   color: var(--text-primary);
 }
+
+@media screen and (max-width: 768px) {
+  .modal-container {
+    width: 90%;
+  }
+}
