--- a/src/components/CardsCollection/CardsCollection.css
+++ b/src/components/CardsCollection/CardsCollection.css
@@ -53,7 +53,7 @@
   gap: 0.5rem;
   padding: 0.5rem 1rem;
   border: none;
-  border-radius: 5px;
+  border-radius: 1rem;
   color: var(--text-primary);
   background-color: var(--primary);
   cursor: pointer;
@@ -79,8 +79,8 @@
 }
 
 input[type="search"] {
-  padding: 0.5rem;
-  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
   border: 0.5px solid transparent;
   background-color: var(--placeholder-bg);
   color: var(--text-primary);
@@ -99,7 +99,7 @@ input[type="search"]:focus {
 .collection-card {
   display: flex;
   height: 150px;
-  border-radius: 0.25rem;
+  border-radius: 1rem;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -134,19 +134,19 @@ input[type="search"]:focus {
   width: 14px;
   height: 14px;
   border: 1px solid var(--text-secondary);
-  border-radius: 3px;
+  border-radius: 0.25rem;
   transition: all 0.2s ease-in-out;
   padding-left: 2px;
 }
 
 .collection-card-checkbox:checked {
-  background-color: yellow;
+  background-color: transparent;
   border-color: var(--text-primary);
 }
 
 .collection-card-checkbox:checked::after {
   content: "✔";
-  color: black;
+  color: var(--text-primary);
   font-size: 12px;
   position: absolute;
   top: 50%;
