--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@
   --text-primary: #ffffff;
   --text-secondary: #5e5e5e;
   --text-error: rgb(106, 62, 3, 0.8);
-  --accent: #172554;
+  --accent: #4f2683;
   --primary: #1c1c1c;
-  --placeholder-bg: rgba(0, 0, 0, 0.5);
-  --modal-bg: rgb(3 166 231 / 25%);
+  --placeholder-bg: rgba(0, 0, 0, 0.6);
+  --modal-bg: rgba(255, 255, 255, 0.25);
   --slider-bg: #000;
   --overlay-bg: rgba(0, 0, 0, 0.7);
   --hover-card-collection: #000;
@@ -16,14 +16,13 @@
 [data-theme="light"] {
   --text-primary: #333333;
   --text-secondary: #808080;
-  --text-error: #e74c3c;
-  --accent: #5dade2;
+  --text-error: #000000;
+  --accent: #ffc630;
   --primary: #f5f5f5;
   --placeholder-bg: rgba(0, 0, 0, 0.1);
-  --modal-bg: rgba(51, 115, 157, 0.388);
   --slider-bg: #fff;
   --overlay-bg: rgba(0, 0, 0, 0.3);
-  --hover-card-collection: #91fdff;
+  --hover-card-collection: #fff430;
 }
 
 * {
